Translated whitepaper to french

--- a/au/coins.html
+++ b/au/coins.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="title" content="EthPyramid">
-    <meta name="description" content="A better self-sustaining, secure pyramid scheme.">
+    <meta name="description" content="A better self-sustaining, secure and transparent pyramid scheme.">
     <meta name="author" content="">
     <link rel="shortcut icon" href="../favicon.ico">
     <title> EthPyramid | AU | Buy/Sell Coins </title>
