--- a/au/index.html
+++ b/au/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
     <meta name="title" content="EthPyramid">
-    <meta name="description" content="A better self-sustaining, secure pyramid scheme.">
+    <meta name="description" content="A better self-sustaining, secure and transparent pyramid scheme.">
     <meta name="author" content="">
     <link rel="shortcut icon" href="/favicon.ico">
     <title> EthPyramid | AU </title>
@@ -75,7 +75,7 @@
                     <img src="../images/BannerLogo.png" alt="" class="hidden-xs">
                 </div>
                 <div class="message">
-                  A self-sustaining, <b>secure</b> pyramid scheme, cunts.
+                  A <b>self-sustaining</b>, <b>secure</b> and <b>transparent</b> pyramid scheme, cunts.
                 </div>
                 <div class="cta-group">
                     <a href="coins.html" class="cta" style="background: #d69361;">Buy In</a>
