--- a/fr/coins.html
+++ b/fr/coins.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="title" content="EthPyramid">
-    <meta name="description" content="Un système pyramidal sécurisé et autonome.">
+    <meta name="description" content="Une pyramide sécurisée, transparente et autonome.">
     <meta name="author" content="">
     <link rel="shortcut icon" href="../favicon.ico">
     <title> EthPyramid | FR | Acheter/Vendre Jetons </title>
@@ -238,7 +238,7 @@
 	<p></p><li>Vous pouvez déplacer vos jetons dans Dividendes, qui seront ensuite stockés en Ethereum. Pour ce faire, cliquez sur le bouton "Vendre" et vos jetons seront transférés dans votre solde de dividendes.</li><p></p>
 	<p></p><li>Vous pouvez également réinvestir vos Dividendes directement dans votre solde EPY en sélectionnant "Réinvestir".</li><p></p>
 	<p></p><li>Pour encaisser vos jetons, cliquez sur le bouton "Retirer" et suivez les instructions.</li><p></p>
-	<p></p><li><b>VEUILLEZ SAUVEGUARDER LE TEXTE SUIVANT:</b> Si, pour une raison quelconque, ce site n'est pas accessible, vous pouvez ouvrir une transaction via Metamask, envoyer 0 Ether avec une limite de gaz 150k au contrat à "0x2fa0ac498d01632f959d3c18e38f4390b005e200" et envoyer "0xb1e35242" sous les données supplémentaires (additional data) pour un plan de sortie personnel.
+	<p></p><li><b>VEUILLEZ SAUVEGUARDER LE TEXTE SUIVANT:</b> Si, pour une raison quelconque, ce site n'est pas accessible, vous pouvez ouvrir une transaction via Metamask, envoyez 0 Ether avec une limite de gaz 150k au contrat à "0x2fa0ac498d01632f959d3c18e38f4390b005e200" et ajoutez "0xb1e35242" sous les données supplémentaires (additional data) pour un plan de sortie personnel.
                   C'est la fonction getMeOutOfHere() du contrat et vous encaisserez de tous vos jetons et dividendes.</li><p></p>
 </div>
 							<div class="container">	
