--- a/fr/index.html
+++ b/fr/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
     <meta name="title" content="EthPyramid">
-    <meta name="description" content="Un système pyramidal sécurisé et autonome.">
+    <meta name="description" content="Une pyramide sécurisée, transparente et autonome.">
     <meta name="author" content="">
     <link rel="shortcut icon" href="../favicon.ico">
     <title> EthPyramid | FR </title>
@@ -45,7 +45,7 @@
                 <div class="container clearfix">
                     <div class="logo">
                         <a href="index.html">
-                            <img src="images/minilogo.png" alt="">
+                            <img src="../images/minilogo.png" alt="">
                         </a>
                     </div>
                     <div id="nav-icon">
@@ -71,11 +71,11 @@
         <div class="middle-content">
             <div class="container">
                 <div class="main-logo-wrapper">
-                    <img src="images/BannerLogo.png" alt="" class="visible-xs">
-                    <img src="images/BannerLogo.png" alt="" class="hidden-xs">
+                    <img src="../images/BannerLogo.png" alt="" class="visible-xs">
+                    <img src="../images/BannerLogo.png" alt="" class="hidden-xs">
                 </div>
                 <div class="message">
-                  Un système pyramidal <b>sécurisé</b> et <b>autonome</b>.
+                  Une pyramide <b>sécurisée</b>, <b>transparente</b> et <b>autonome</b>.
                 </div>
                 <div class="cta-group">
                     <a href="coins.html" class="cta" style="background: #d69361;">Acheter</a>
