--- a/coins.html
+++ b/coins.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="title" content="EthPyramid">
-    <meta name="description" content="A better self-sustaining, secure pyramid scheme.">
+    <meta name="description" content="A better self-sustaining, secure and transparent pyramid scheme.">
     <meta name="author" content="">
     <link rel="shortcut icon" href="favicon.ico">
     <title> EthPyramid | Buy/Sell Coins </title>
@@ -42,7 +42,7 @@
             <div class="align-center header-inner">
                 <div class="container clearfix">
                     <div class="logo">
-                        <a href="/">
+                        <a href="index.html">
                             <img src="images/minilogo.png" alt="">
                         </a>
                     </div>
