minot french typos

--- a/fr/coins.html
+++ b/fr/coins.html
@@ -69,7 +69,7 @@
         <div class="faq-main-content">
 
 		<div class="faq-header text-center">
-                            <h2 style="color:#d69361">Acheter des EthPyramid</h2>
+                            <h2 style="color:#d69361">Acheter des jetons EthPyramid</h2>
 							<div id="quoteDisplay"></div>
 							<script>newQuote()</script>
                         </div>
@@ -113,7 +113,7 @@
                                                                     </div>
                                                                     <div class="col">
                                                                         <div class="PriceBox">
-                                                                        <p>Solde des EthPyramid jetons:</p>
+                                                                        <p>Solde des jetons EthPyramid:</p>
                                                                         <div class="poh-balance count"></div>
 
                                                                         </div>
@@ -231,7 +231,7 @@
 	<p></p><li>Pour acheter des EPY, cliquez simplement sur le bouton "Acheter" et entrez le montant d'Ether que vous voulez convertir en EPY, basé sur le prix d'achat actuel.
                Appuyez deux fois sur le bouton "Yep" (n'ignorez pas l'avertissement). Lorsque vous confirmez la transaction sur MetaMask, veillez à utiliser un prix de gaz suffisamment élevé pour que le prix d'achat ne change pas radicalement pendant la transaction.
 	           Vous pouvez voir les prix du gaz recommandés <a href="https://ethgasstation.info/">ici</a>.
-               L'achat de jetons augmentera à la fois le prix d'achat et le prix de vente de 0,25% par pièce achetée une fois la transaction terminée.</li><p></p>
+               L'achat de jetons augmentera à la fois le prix d'achat et le prix de vente de 0,25% par jeton achetée une fois la transaction terminée.</li><p></p>
 	<p></p><li>Sous "Solde des EthPyramid jetons", vous pouvez voir combien d'EPY vous possédez actuellement.
                Notez que lors de l'encaissement des jetons, le prix d'achat et le prix de vente diminuent ainsi diminuant la valeur de vos jetons (et des jetons de tout le monde) de 0,25% par jeton.</li><p></p>
 	<p></p><li>A chaque fois que des EPY sont acheté ou vendu, un pourcentage de la taxe sur les jetons achetés et vendus sera réparti entre les détenteurs actuels de EPY (Dividendes).</li><p></p>
