fixed french flag icon leading to coins instead of index and a space for the contract balance

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <div class="header sticky-header">
 		<div class="flagBits">
 		<a href="au/index.html"><img src="images/AU.jpg"></a>
-		<a href="fr/coins.html"><img src="images/FR.jpg"></a>
+		<a href="fr/index.html"><img src="images/FR.jpg"></a>
         <a href="#"><img src="images/UK.jpg"></a>
 		</div>
 		<div class="socialBits">
