removed monkey "singe" from french localisation whitepaper as it makes not sense in fnench

--- a/fr/whitepaper.html
+++ b/fr/whitepaper.html
@@ -1148,7 +1148,7 @@
             Nous voullons que vous puissiez vous tenir debout sur votre montagne de dividendes avec un sourire sur votre visage aussi grand que celui de Carlos Matos ce jour fatidique.
             Cette pyramide de l'amour peu vous mener a vos rêves, où votre âme est libre. Ou un bel endroit confortable sous le pont.</p>
          <p><strong>SYNERGIE</strong></p>
-         <p>Notre équipe est composée d'environ une douzaine de singes codeurs les plus enthousiastes et autistes qu'on a pu trouver.
+         <p>Notre équipe est composée d'environ une douzaine codeurs les plus enthousiastes et autistes qu'on a pu trouver.
             Ils jouent ensemble, travaillent ensemble, construisent ensemble.
             Ils sont vraiment les meilleurs. Les meilleurs à quoi? Nous ne sommes pas tout à fait sûrs, mais tout le monde est bon à quelque chose.
             Même si cette chose est de perdre de l'argent.
