fixed some more links not going to right palce

--- a/fr/index.html
+++ b/fr/index.html
@@ -33,8 +33,8 @@
         <div class="header sticky-header">
 		<div class="flagBits">
 		<a href="#"><img src="../images/FR.jpg"></a>
-		<a href="../coins.html"><img src="../images/UK.jpg"></a>
-		<a href="../au/coins.html"><img src="../images/AU.jpg"></a>
+		<a href="../index.html"><img src="../images/UK.jpg"></a>
+		<a href="../au/index.html"><img src="../images/AU.jpg"></a>
 		</div>
 		<div class="socialBits">
 		<a href="https://twitter.com/ethpyramid" target="_blank"><i class="fab fa-twitter-square" style="margin-right:10px; color:white;"></i></a>
