--- a/fr/index.html
+++ b/fr/index.html
@@ -22,7 +22,15 @@
     <link rel="icon"
     type="image/png"
     href="../favicon.ico">
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-113460032-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', 'UA-113460032-1');
+</script>
 </head>
 
 <body>
