--- a/whitepaper.html
+++ b/whitepaper.html
@@ -1137,6 +1137,15 @@
          cursor: -webkit-image-set(url("file:///Users/steven/Library/Application%20Support/abnerworks.Typora/themes/night/cursor.png") 1x, url("file:///Users/steven/Library/Application%20Support/abnerworks.Typora/themes/night/cursor@2x.png") 2x) 8 8, auto;
          }
       </style>
+	  <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-113460032-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-113460032-1');
+</script>
    </head>
    <body class='typora-export' >
       <div  id='write'  class = 'is-mac show-fences-line-number'>
