Added German translation

--- a/de/coins.html
+++ b/de/coins.html
@@ -8,7 +8,7 @@
     <meta name="description" content="A better self-sustaining, secure and transparent pyramid scheme.">
     <meta name="author" content="">
     <link rel="shortcut icon" href="favicon.ico">
-    <title> EthPyramid | Buy/Sell Coins </title>
+    <title>EthPyramid | DE | Buy/Sell Coins </title>
     <link rel="stylesheet" href="css/jquery.modal.min.css">
     <!--custom stylesheet -->
     <link rel="stylesheet" href="css/main.css?1507783168">
@@ -39,10 +39,10 @@
     <div class="introduction-banner">
         <div class="header sticky-header">
 		<div class="flagBits">
-        <a href="coins.html"><img src="images/UK.jpg"></a>
-		<a href="au/coins.html"><img src="images/AU.jpg"></a>
-		<a href="fr/coins.html"><img src="images/FR.jpg"></a>
-        <a href="de/coins.html"><img src="images/DE.jpg"></a>
+        <a href="../de/coins.html"><img src="../images/DE.jpg"></a>
+        <a href="../coins.html"><img src="images/UK.jpg"></a>
+		<a href="../au/coins.html"><img src="images/AU.jpg"></a>
+		<a href="../fr/coins.html"><img src="images/FR.jpg"></a>
 		</div>
 				<div class="socialBits">
 		<a href="https://twitter.com/ethpyramid" target="_blank"><i class="fab fa-twitter-square" style="margin-right:10px; color:white;"></i></a>
