--- a/au/coins.html
+++ b/au/coins.html
@@ -39,9 +39,10 @@
     <div class="introduction-banner">
         <div class="header sticky-header Straya">
 				<div class="flagBits">
-		<a href="#"><img src="../images/AU.jpg"></a>
+		<a href="../au/coins.html"><img src="../images/AU.jpg"></a>
 		<a href="../coins.html"><img src="../images/UK.jpg"></a>
 		<a href="../fr/coins.html"><img src="../images/FR.jpg"></a>
+        <a href="../de/coins.html"><img src="../images/DE.jpg"></a>
 		</div>
 				<div class="socialBits">
 		<a href="https://twitter.com/ethpyramid" target="_blank"><i class="fab fa-twitter-square" style="margin-right:10px; color:white;"></i></a>
