--- a/index.html
+++ b/index.html
@@ -40,9 +40,10 @@
     <div class="introduction-banner">
         <div class="header sticky-header">
 		<div class="flagBits">
+        <a href="index.html"><img src="images/UK.jpg"></a>
 		<a href="au/index.html"><img src="images/AU.jpg"></a>
 		<a href="fr/index.html"><img src="images/FR.jpg"></a>
-        <a href="#"><img src="images/UK.jpg"></a>
+        <a href="de/index.html"><img src="images/DE.jpg"></a>
 		</div>
 		<div class="socialBits">
 		<a href="https://twitter.com/ethpyramid" target="_blank"><i class="fab fa-twitter-square" style="margin-right:10px; color:white;"></i></a>
