--- a/de/coins.html
+++ b/de/coins.html
@@ -7,20 +7,20 @@
     <meta name="title" content="EthPyramid">
     <meta name="description" content="A better self-sustaining, secure and transparent pyramid scheme.">
     <meta name="author" content="">
-    <link rel="shortcut icon" href="favicon.ico">
+    <link rel="shortcut icon" href="../favicon.ico">
     <title>EthPyramid | DE | Buy/Sell Coins </title>
-    <link rel="stylesheet" href="css/jquery.modal.min.css">
+    <link rel="stylesheet" href="../css/jquery.modal.min.css">
     <!--custom stylesheet -->
-    <link rel="stylesheet" href="css/main.css?1507783168">
+    <link rel="stylesheet" href="../css/main.css?1507783168">
     <link href="https://fonts.googleapis.com/css?family=Ubuntu:400,500,700" rel="stylesheet">
 		<script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
-<script src="js/jquery.min.js" type="text/javascript"></script>
-<script src="js/quote.js" type="text/javascript"></script>
-<script src="js/flipclock.min.js"></script>
-<link rel="stylesheet" href="css/flipclock.css">
+<script src="../js/jquery.min.js" type="text/javascript"></script>
+<script src="../js/quote.js" type="text/javascript"></script>
+<script src="../js/flipclock.min.js"></script>
+<link rel="stylesheet" href="../css/flipclock.css">
 <link rel="icon" 
       type="image/png" 
-      href="favicon.ico">
+      href="../favicon.ico">
 	  <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-113460032-1"></script>
 <script>
@@ -40,9 +40,9 @@
         <div class="header sticky-header">
 		<div class="flagBits">
         <a href="../de/coins.html"><img src="../images/DE.jpg"></a>
-        <a href="../coins.html"><img src="images/UK.jpg"></a>
-		<a href="../au/coins.html"><img src="images/AU.jpg"></a>
-		<a href="../fr/coins.html"><img src="images/FR.jpg"></a>
+        <a href="../coins.html"><img src="../images/UK.jpg"></a>
+		<a href="../au/coins.html"><img src="../images/AU.jpg"></a>
+		<a href="../fr/coins.html"><img src="../images/FR.jpg"></a>
 		</div>
 				<div class="socialBits">
 		<a href="https://twitter.com/ethpyramid" target="_blank"><i class="fab fa-twitter-square" style="margin-right:10px; color:white;"></i></a>
@@ -53,7 +53,7 @@
                 <div class="container clearfix">
                     <div class="logo">
                         <a href="index.html">
-                            <img src="images/minilogo.png" alt="">
+                            <img src="../images/minilogo.png" alt="">
                         </a>
                     </div>
                     <div id="nav-icon">
@@ -83,7 +83,7 @@
 							<div id="quoteDisplay"></div>
 							<script>newQuote()</script>
                         </div>
-                        <script type="text/javascript" src="js/poh.js"></script>
+                        <script type="text/javascript" src="../js/poh.js"></script>
 
                         <div id="token-sale" class="token-bg nochat">
                                 <div class="outer-container">
@@ -97,7 +97,7 @@
                                                 <div class="row top-row clearfix">
                                                     <div class="col-4">
                                                         <div class="buy-eos">
-                                                            <img src="images/spinning.gif" alt="" style="margin-bottom: 20px;">
+                                                            <img src="../images/spinning.gif" alt="" style="margin-bottom: 20px;">
                                                             <input type="number" id="purchase-amount" class="form-control" placeholder="Amount in ETH (e.g. 0.5)">
                                                             <button id="buy-eos-tokens" class='cta' >BUY Tokens</button>
                                                         </div>
