--- a/de/index.html
+++ b/de/index.html
@@ -7,21 +7,21 @@
     <meta name="title" content="EthPyramid">
     <meta name="description" content="A better self-sustaining, secure and transparent pyramid scheme.">
     <meta name="author" content="">
-    <link rel="shortcut icon" href="favicon.ico">
+    <link rel="shortcut icon" href="../favicon.ico">
     <title>EthPyramid | DE</title>
-    <link rel="stylesheet" href="css/jquery.modal.min.css">
+    <link rel="stylesheet" href="../css/jquery.modal.min.css">
     <link href="https://fonts.googleapis.com/css?family=Ubuntu:400,500,700" rel="stylesheet">
 	<script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
-    <script src="js/jquery.min.js" type="text/javascript"></script>
-    <script src="js/jquery.countdown.js" type="text/javascript"></script>
-    <script src="js/moment.min.js" type="text/javascript"></script>
+    <script src="../js/jquery.min.js" type="text/javascript"></script>
+    <script src="../js/jquery.countdown.js" type="text/javascript"></script>
+    <script src="../js/moment.min.js" type="text/javascript"></script>
     <!--custom stylesheet -->
-    <link rel="stylesheet" href="css/main.css?1512455877">
-    <link rel="stylesheet" href="css/main_ie.css?1512456911">
-    <script src="js/jquery.bxslider.min.js"></script>
+    <link rel="stylesheet" href="../css/main.css?1512455877">
+    <link rel="stylesheet" href="../css/main_ie.css?1512456911">
+    <script src="../js/jquery.bxslider.min.js"></script>
     <link rel="icon" 
     type="image/png" 
-    href="favicon.ico">
+    href="../favicon.ico">
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-113460032-1"></script>
 <script>
@@ -40,10 +40,10 @@
     <div class="introduction-banner">
         <div class="header sticky-header">
 		<div class="flagBits">
-        <a href="../de/index.html"><img src="images/DE.jpg"></a>
-        <a href="../index.html"><img src="images/UK.jpg"></a>
-		<a href="../au/index.html"><img src="images/AU.jpg"></a>
-		<a href="../fr/index.html"><img src="images/FR.jpg"></a>
+        <a href="../de/index.html"><img src="../images/DE.jpg"></a>
+        <a href="../index.html"><img src="../images/UK.jpg"></a>
+		<a href="../au/index.html"><img src="../images/AU.jpg"></a>
+		<a href="../fr/index.html"><img src="../images/FR.jpg"></a>
 		</div>
 		<div class="socialBits">
 		<a href="https://twitter.com/ethpyramid" target="_blank"><i class="fab fa-twitter-square" style="margin-right:10px; color:white;"></i></a>
@@ -80,8 +80,8 @@
         <div class="middle-content">
             <div class="container">
                 <div class="main-logo-wrapper">
-                    <img src="images/BannerLogo.png" alt="" class="visible-xs">
-                    <img src="images/BannerLogo.png" alt="" class="hidden-xs">
+                    <img src="../images/BannerLogo.png" alt="" class="visible-xs">
+                    <img src="../images/BannerLogo.png" alt="" class="hidden-xs">
                 </div>
                 <div class="message">
                     A <b>self-sustaining</b>, <b>secure</b> and <b>transparent</b> pyramid scheme.
@@ -219,12 +219,10 @@
     <!--block.one team section-->
   
 </div>
-<script type="text/javascript" src="js/jquery.ellipsis.js"></script>
-<script src="js/jquery.validate.min.js" type="text/javascript"></script>
-<script src="js/jquery.modal.min.js" type="text/javascript"></script>
-<script src="js/script.js?1507515135" type="text/javascript"></script>
-
-
+<script type="text/javascript" src="../js/jquery.ellipsis.js"></script>
+<script src="../js/jquery.validate.min.js" type="text/javascript"></script>
+<script src="../js/jquery.modal.min.js" type="text/javascript"></script>
+<script src="../js/script.js?1507515135" type="text/javascript"></script>
 
 </body>
 
