Further work on German

--- a/de/index.html
+++ b/de/index.html
@@ -65,12 +65,12 @@
                         <ul>
                             <li><a href="https://etherscan.io/address/0x2fa0ac498d01632f959d3c18e38f4390b005e200" target="_blank">Smart Contract</a>
                             </li>
-                            <li><a href="coins.html">My Coins</a>
+                            <li><a href="coins.html">Meine Münzen</a>
                             </li>
-							<li><a href="https://blog.ethpyramid.com"><span style="color:#FF4444">NEW!   </span>Blog</a>
+							<li><a href="https://blog.ethpyramid.com"><span style="color:#FF4444">NEU!   </span>Blog</a>
                             </li>
                             <li>
-                              <a href="whitepaper.html" target="_blank">Whitepaper</a>
+                              <a href="whitepaper.html" target="_blank">Weißbuch</a>
                             </li>
                         </ul>
                     </div>
@@ -84,14 +84,14 @@
                     <img src="../images/BannerLogo.png" alt="" class="hidden-xs">
                 </div>
                 <div class="message">
-                    A <b>self-sustaining</b>, <b>secure</b> and <b>transparent</b> pyramid scheme.
+                    Ein <b>selbsterhaltendes</b>, <b>sicheres</b> und <b>lransparentes</b> Schneeballsystem.
                 </div>
                 <div class="cta-group">
-                    <a href="coins.html" class="cta" style="background: #d69361;">Buy In</a>
+                    <a href="coins.html" class="cta" style="background: #d69361;">Münzen kaufen</a>
                     <a href="https://etherscan.io/address/0x2fa0ac498d01632f959d3c18e38f4390b005e200" class="cta" target="_blank">Smart Contract</a>
                 </div>
                 <div class="banner-title hidden-xs">
-                    <h2>Strong Hands Only</h2>
+                    <h2>Nur Für eiserne Hände</h2>
                 </div>
             </div>
         </div>
@@ -100,7 +100,7 @@
     <div class="ep-features-main">
         <div class="container">
             <div class="features-description visible-xs">
-                <h2>The Most Powerful &amp; Decentralized Pyramid Yet</h2>
+                <h2>Die momentan Stärkste &amp; dezentralisierte Pyramide</h2>
             </div>
             <div class="features-box-main">
                 <div class="flex-parent clearfix">
@@ -111,9 +111,12 @@
                                     <div class="icon-main">
                                         <i class="fas fa-chart-line"></i>
                                     </div>
-                                    <h4> Pyramid Technology</h4>
+                                    <h4>Pyramiden Technologie</h4>
                                     <div class="line"></div>
-                                    <p>When someone purchases or sells an EthPyramid Token (EPY), 10% of the buy/sell-in-price is split by the total number of coins and given as locked-in dividends to each previous investor based on how many coins they own. This is stored as price-locked EPY Tokens that nobody can touch but you!
+                                    <p>
+                                        Wenn jemand EthPyramid Münzen(EPY) kauft oder verkauft werden 10% vom Preis an
+                                        alle Münzenhalter prozentual in Form von Dividenden verteilt (mehr Münzen=mehr Dividenden).
+                                        Dividenden sind nicht vom Münzenpreis beeinflusst und werden als Ethereum ausgezahlt.
                                     </p>
                                 </div>
                             </li>
@@ -122,10 +125,15 @@
                                     <div class="icon-main">
                                         <i class="fas fa-exchange-alt"></i>
                                     </div>
-                                    <h4> Dividends </h4>
+                                    <h4>Dividenden</h4>
                                     <div class="line"></div>
-                                    <p>10% ETH of every buy and sell will be rewarded to token holders. <b>STRONG HANDS</b> will be rewarded through every crash and pump. Our smart contract, unlike other schemes, will allow you to directly reinvest your dividends back into coins.</p>
-                                    
+                                    <p>
+                                        10% Ethereum als Belohnung an jeden Münzenhalter verteilt. <b>STARKE HÄNDE</b>
+                                        werden bei jedem Auf und Ab belohnt. Unser Smart-Contract erlaubt es dir, im
+                                        Gegensatz zu anderen Systemen, deine Dividenden direkt dazu zu benutzen, um neue
+                                        Münzen zu kaufen.
+                                    </p>
+
                                 </div>
                             </li>
                             <li>
@@ -133,9 +141,14 @@
                                         <div class="icon-main">
                                                 <i class="fas fa-sync-alt"></i>
                                             </div>
-                                            <h4> Forever </h4>
+                                            <h4>Für Immer</h4>
                                             <div class="line"></div>
-                                            <p>Seriously, no premine, no self destruct, no exit scam. This contract will fluctuate in price and pay out dividends until the ethereum network dies. At any time, you can sell your tokens back to the Smart Contract for 90% of the current price, or withdraw/reinvest the dividends you've accumulated!
+                                            <p>
+                                                Im Ernst, keine Verteilung vor dem Start der Seite, keine Selbstzerstörung,
+                                                kein Betrug mit Hintertüren für die Entwickler.Der Vertragt schwingt auf
+                                                und ab und wird bis ans Ende des Ethereumnetzwerkes Dividenden auszahlen.
+                                                Du kannst zu jeder deine Münzen zum aktuellen Verkaufspreis verkaufen
+                                                oder deine Dividenden benutzen um mehr Münzen zu kaufen.
                                             </p>
                                 </div>
                             </li>
@@ -146,27 +159,40 @@
                             <div class="icon-main">
                                 <i class="fas fa-chart-line"></i>
                             </div>
-                            <h4> Pyramid Technology</h4>
+                            <h4>Pyramiden Technologie</h4>
                                     <div class="line"></div>
-                                    <p>When someone purchases or sells an EthPyramid Token (EPY), 10% of the buy/sell-in-price is split by the total number of coins and given as locked-in dividends to each previous investor based on how many coins they own. This is stored as price-locked EPY Tokens that nobody can touch but you!
+                                    <p>
+                                        Wenn jemand EthPyramid Münzen(EPY) kauft oder verkauft werden 10% vom Preis an
+                                        alle Münzenhalter prozentual in Form von Dividenden verteilt (mehr Münzen=mehr
+                                        Dividenden). Dividenden sind nicht vom Münzenpreis beeinflusst und werden als
+                                        Ethereum ausgezahlt.
                                     </p>
                         </div>
                         <div class="features-box mp col-4 feat-flexible">
                             <div class="icon-main">
                                 <i class="fas fa-exchange-alt"></i>
                             </div>
-                            <h4> Dividends </h4>
+                            <h4>Dividenden</h4>
                             <div class="line"></div>
-                            <p>10% ETH of every <strong>buy and sell</strong> will be rewarded to token holders. Strong hands will be rewarded through every crash and pump. The smart contract, unlike other schemes, will allow you to directly reinvest your dividends back into coins, increasing your ability to earn more dividends.</p> 
-                            
+                            <p>
+                                Wenn jemand EthPyramid Münzen(EPY) <strong>kauft oder verkauft</strong> werden 10% vom
+                                Preis an alle Münzenhalter prozentual in Form von Dividenden verteilt (mehr Münzen=mehr
+                                Dividenden). Starke Hände werden bei jedem Auf und Ab belohnt. Unser Smart-Contract erlaubt es dir,
+                                im Gegensatz zu anderen Systemen, deine Dividenden direkt dazu zu benutzen, um neue Münzen zu kaufen.
+                            </p>
+
                         </div>
                         <div class="features-box mp col-4 feat-usable">
                             <div class="icon-main">
                                 <i class="fas fa-sync-alt"></i>
                             </div>
-                            <h4> Forever </h4>
+                            <h4>Für Immer</h4>
                             <div class="line"></div>
-                            <p>Seriously, no premine, no self destruct, no exit scam. This contract will fluctuate in price and pay out dividends until the ethereum network dies. At any time, you can sell your tokens back to the Smart Contract for 90% of the current price, or withdraw/reinvest the dividends you've accumulated!
+                            <p>
+                                Im Ernst, keine Verteilung vor dem Start der Seite, keine Selbstzerstörung, kein Betrug
+                                mit Hintertüren für die Entwickler.Der Vertragt schwingt auf und ab und wird bis ans Ende
+                                des Ethereumnetzwerkes Dividenden auszahlen. Du kannst zu jeder deine Münzen zum aktuellen
+                                Verkaufspreis verkaufen oder deine Dividenden benutzen um mehr Münzen zu kaufen.
                             </p>
                         </div>
                     </div>
@@ -185,29 +211,27 @@
                             <div class="faq-main-content" style="padding-top: 0px;">
                                 <div class="container">
                                     <div class="sections">
-                                <h4 id="1">Q: Is this a real thing?</h4>
-                                <p>A: Yes, EthPyramid Tokens are built on the ethereum blockchain. They have no value outside of engaging in the EP game with our Math Robot though and you should not consider them a real investment.</p>
+                                <h4 id="1">Q: Ist das eine legitime Crypto- Münze?</h4>
+                                <p>A: Ja, EthPyramid (EPY) ist legitimer ERC20 Standard Token basierend auf dem Ethereum Netzwerk.Er hat keinen wert ausserhalb von Ethpyramid und kann nur dort gehandelt werden und sollte auf keinen fall als richtige Investition gesehen werden.</p>
                              </div>
                              <div class="sections">
-                                <h4 id="2">Q: Has this code been copy pasted from POWH bunk code?</h4>
-                                <p>A: EthPyramid's code has been built from the ground up, all loopholes previously found in flawed ponzi systems are not present in Ethpyramid. The development team of EthPyramid has in no way in the past been linked to POWHcoin.</p>
+                                <h4 id="2">Q: Habt ihr euch den Code von PoWH geklaut?</h4>
+                                <p>A: Nein, der EthPyramid Code wurde von Grund auf neu geschrieben und alle Hintertüren der vorherigen Pyramidensysteme sind in EthPyramid nicht vorhanden.</p>
                              </div>
                              <div class="sections">
-                                <h4 id="3">Q: Wasn't there something similar to this earlier?</h4>
-                                <p>A: Yes, there are several variations of ponzis, pyramids, and other schemes; EthPyramid is the next step forward with reinvestable dividends and 10% redistribution on sell. 
-
-                                </p>                                    </div>
+                                <h4 id="3">Q: Moment, gabs das nicht schonmal?</h4>
+                                 <p>A: Ja, es gab verschieden Varianten des Pyramidensystem, EthPyramid ist der nächste schritt Vorwärts. 10% der Investitionen gehen an alle münzen halter als Dividenden die wieder investiert oder ausgezahlt werden können.</p>
                              <div class="sections">
-                                 <h4 id="4">Q: Is EthPyramid secure?</h4>
-                                 <p>Yes. Our dev team put a lot of hours into code work and testing to make sure your tokens are safe. Internal functions of the contract are not accessible to the end user.<p>
+                                 <h4 id="4">Q: Ist Ethpyramid sicher?</h4>
+                                 <p>Ja, unser Entwicklungsteam hat zahllose Stunden damit verbracht den Smart-Contract zu testen um sicherzustellen das er absolut solide und sicher läuft. Interne fFunktionen des Vertrages sind für niemanden verfügbar.<p>
                               </div>
                              <div class="sections">
-                                <h4 id="5">Q: What do I need to buy into this Pyramid?</h4>
-                                <p>A: You need to install <a href="https://metamask.io/">Metamask</a> and also need to buy some Ether (ETH), probably from something like Coinbase.</p>
+                                <h4 id="5">Q: Alles klar, wie kann ich teilnehmen?</h4>
+                                <p>A: Du brauchst eine Internetbrowser-Erweiterung die sich&nbsp;<a href="https://metamask.io/">Metamask</a>&nbsp;nennt und anschließend musst du ein wenig Ethereum kaufen.</p>
                              </div>
                              <div class="sections">
-                                <h4 id="6">Q: Is this coin pre-mined?</h4>
-                                <p>A: No, Nor are there any loops in the code that allow us to take ETH out of the contract in any ways that you yourself are not capable of.</p>
+                                <h4 id="6">Q: Kann man die Münze so wie Bitcoin irgendwo abbauen?</h4>
+                                <p>A: Nein, weder wir noch irgendjemand anderes hat die Möglichkeit zu abbauen. Dazu haben wir haben die gleichen Möglichkeiten Geld rein- oder rauszunehmen wie Du. Keine Hintertüren oder doppelte Böden. Ethpyramid ist selbsterhaltend und kann nicht von aussen verändert, beeinflusst oder geknackt werden.</p>
                              </div>
                                 </div>
                             </div>
